clang/test/BSC/Negative/Method/Enum/enum_instance_function_multi_declaration_2/enum_header_2.hbs

enum E;
int enum E::to_int(enum E* this) { // expected-error {{redefinition of 'to_int'}}
  return (int)*this;
}